--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,8 @@ body{
 .content{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-right: 5px;
     color: red;
     font-size: 24px;
